WIP - basic spark integration tests
allows testing against prerelease spark/delta versions